Add options to javadocWeb task